--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-    info: "dev branch,springcloud-config/config-dev.yml version=1" 
+    info1: "dev branch,springcloud-config/config-dev.yml version=1" 
