--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: "master branch,springcloud-config/config-dev.yml version=123guo" 
+  info: "master branch,springcloud-config/config-dev.yml version=123456" 
